Remove REST Endpoints and Read Local Files
Remove the added REST endpoints for each controller, as
their addition was not the desired method to resolving
the issue.

Read json file contents using a file path generated from
environment variables to allow users to specify a json
file and retrieve its contents.

Remove added system properties from application.properties
because the environment variables will be set using
docker.
