# src/main/java/com/easydynamics/oscalrestservice/api/ComponentController.java
@@ -4,8 +4,6 @@ import io.swagger.v3.oas.annotations.Parameter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.core.env.Environment;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -30,9 +28,6 @@ public class ComponentController {
 
   private String componentFromUrl = restTemplate.getForObject(EXAMPLE_COMPONENT_URL, String.class);
 
-  @Autowired
-  private Environment env;
-
   /**
    * Defines a GET request for component by ID.
    *
@@ -42,37 +37,25 @@ public class ComponentController {
 
   @GetMapping("/components/{id}")
   public ResponseEntity<String> findById(@Parameter @PathVariable String id) {
-
-    if (id.contains(EXAMPLE_COMPONENT_ID)) {
+    if (id.equals(EXAMPLE_COMPONENT_ID)) {
       return new ResponseEntity<String>(componentFromUrl, HttpStatus.OK);
-    } else {
+    }
+
+    String parentDirectory = System.getenv("PARENT_DIR");
+    String componentsDirectory = System.getenv("COMPONENTS_DIR");
+    String json;
+
+    if (parentDirectory == null || componentsDirectory == null) {
       return new ResponseEntity<String>("Component not found", HttpStatus.NOT_FOUND);
     }
-  }
 
-  /**
-   * Defines a GET request for a component via an environment variable.
-   *
-   * @param componentLocalJson the environment variable representing the local
-   *                           components file
-   * @return the oscal content of the local components json file
-   */
-  @GetMapping("/components/env/{componentLocalJson}")
-  public ResponseEntity<String> findByLocalEnv(@Parameter @PathVariable String componentLocalJson) {
-    String fileName = env.getProperty(componentLocalJson);
-    if (fileName == null) {
-      return new ResponseEntity<String>("componentLocalJson is not an environemnt variable.", 
-        HttpStatus.NOT_FOUND);
-    }
-    String contents;
     try {
-      contents = Files.readString(Path.of(fileName));
+      json = Files.readString(Path.of(parentDirectory, componentsDirectory, id));
     } catch (IOException e) {
-      return new ResponseEntity<String>("Component file does not exist locally.", 
-        HttpStatus.NOT_FOUND);
+      return new ResponseEntity<String>("Component not found", HttpStatus.NOT_FOUND);
     }
-
-    return new ResponseEntity<String>(contents, HttpStatus.OK);
+    
+    return new ResponseEntity<String>(json, HttpStatus.OK);
   }
 
 }
